Use getFirst() instead of get(0) as required by OpenRewrite